# Omega-Core

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/src/main/: OCGlobal.hpp
game/src/main/engine/: Controller.cpp  Controller.hpp  Timer.cpp  Timer.hpp
game/src/main/game/: OmegaCore.cpp
game/src/main/gui/: Window.cpp  Window.hpp
game/src/main/models/: AssetsModel.cpp  AssetsModel.hpp  InputEventModel.cpp  InputEventModel.hpp  MapModel.cpp  MapModel.hpp  ScreenModel.cpp  ScreenModel.hpp
game/src/main/models/api/: IMapModel.hpp  IScreenModel.hpp
game/src/main/renderers/: IsometricTileRenderer.cpp  IsometricTileRenderer.hpp  NullRenderer.hpp  TileRenderer.cpp  TileRenderer.hpp
game/src/main/renderers/api/: IRenderer.hpp
game/src/main/resources/: maps.qrc  sprites.qrc  tiles.qrc
game/src/main/resources/maps/: small.xml  start-map.xml
game/src/main/resources/sprites/: sprites.xml
game/src/main/resources/tiles/: background-tile.xml
game/src/main/services/: MapService.cpp  MapService.hpp  TileRenderingService.cpp  TileRenderingService.hpp  UpdateService.cpp  UpdateService.hpp
game/src/main/services/api/: IUpdateService.hpp
game/src/main/utilities/transforms/: ITransformation.hpp  IsometricTransformation.cpp  IsometricTransformation.hpp  TransformationAdapter.cpp  TransformationAdapter.hpp
lib/: CMakeLists.txt
lib/dp/include/: Observable.hpp  Observer.hpp
lib/loader/include/: Commons.hpp
lib/loader/include/loader/: Commons.hpp  Loader.hpp  Map.hpp  MapSheet.hpp  Sprite.hpp  SpriteSheet.hpp  TileSheet.hpp
lib/loader/src/loader/: Definitions.hpp  Loader.cpp  Map.cpp  MapLoader.cpp  MapLoader.hpp  MapSheet.cpp  Sprite.cpp  SpriteLoader.cpp  SpriteLoader.hpp  SpriteSheet.cpp  TileLoader.cpp  TileLoader.hpp  TileSheet.cpp
lib/loader/src/loader/utilities/: IsometricTileCutter.cpp  IsometricTileCutter.hpp  NullTileCutter.hpp  PrivateHelpers.hpp  SquaredTileCutter.cpp  SquaredTileCutter.hpp  TileCutterAdapter.cpp  TileCutterAdapter.hpp
lib/loader/src/loader/utilities/api/: ITileCutter.hpp
